--- a/styles/style.css
+++ b/styles/style.css
@@ -70,18 +70,8 @@
 }
 
 .header__theme-menu-button:focus {
-  border: none;
+  border-bottom: 1px solid var(--section-title-color);
   outline: none;
-}
-
-.header__theme-menu-button:focus::after {
-  content: "";
-  position: absolute;
-  height: 1px;
-  width: 100%;
-  left: 0;
-  bottom: 0;
-  background-color: var(--section-title-color);
 }
 
 .header__theme-menu-button:focus-visible {
@@ -182,7 +172,7 @@
   color: var(--subtitle-color);
 }
 
-.section_column {
+.section_text-box-p {
   display: flex;
   flex-direction: column;
   flex: 0 0 auto;
@@ -190,16 +180,12 @@
   width: 66%;
 }
 
-.section_row {
+.section_text-box-a {
   display: flex;
   flex-direction: row;
   flex-wrap: wrap;
   gap: 20px;
   width: 100%;
-}
-
-.section_hard_concentration {
-  display: flex;
 }
 
 .section_concentration_decrease {
@@ -213,7 +199,6 @@
 
 .section_hard_concentration .section_list,
 .section_gold_fish .section_list {
-  display: flex;
   flex-direction: column;
   flex: 0 0 auto;
   gap: 20px;
@@ -221,7 +206,6 @@
 }
 
 .section_concentration_decrease .section_list {
-  display: flex;
   flex-direction: row;
   flex-wrap: wrap;
   gap: 20px;
@@ -256,33 +240,35 @@
   font-weight: normal;
 }
 
-.section:last-of-type {
+
+
+.section_picture-box {
   display: grid;
   grid-template-columns: repeat(3, 1fr);
   gap: 20px 19px;
 }
 
-.section:last-of-type .section_list-item_title {
+.section_picture-box .section_list-item_title {
   grid-column: 1 / -1;
   width: 100%;
   margin-bottom: 0;
   text-align: left;
 }
 
-.section:last-of-type .section_image {
+.section_picture-box .section_image {
   object-fit: cover;
   object-position: center;
   width: 100%;
   height: 100%;
 }
 
-.section:last-of-type img:first-of-type,
-.section:last-of-type img:last-of-type {
+.section_picture-box img:first-of-type,
+.section_picture-box img:last-of-type {
   grid-column: span 2;
 }
 
-.section:last-of-type img:nth-of-type(2),
-.section:last-of-type img:nth-of-type(3) {
+.section_picture-box img:nth-of-type(2),
+.section_picture-box img:nth-of-type(3) {
   grid-row: span 2;
 }
 
@@ -414,7 +400,7 @@
     gap: 51px;
   }
 
-  .section:last-of-type {
+  .section_picture-box {
     display: flex;
     flex-direction: column;
     gap: 10px;
