--- a/styles/style.css
+++ b/styles/style.css
@@ -293,6 +293,7 @@
     display: flex;
     flex-direction: column;
     align-items: flex-end;
+    height: auto;
   }
 
   .header_title-content {
